packages/survey-core/src/default-theme/blocks/sv-ranking.scss
@use "../variables.scss" as *;
@use "../mixins.scss" as mixins;
@use "../typography-mixins.scss" as *;

.sv-ranking {
  outline: none;
  user-select: none;
  -webkit-user-select: none;
}

.sv-ranking-item {
  cursor: pointer;
  position: relative;
  opacity: 1;
}

.sv-ranking-item:focus .sv-ranking-item__icon--hover {
  visibility: hidden;
}

.sv-ranking-item:hover:not(:focus) .sv-ranking-item__icon--hover {
  visibility: visible;
}

.sv-question--disabled .sv-ranking-item:hover .sv-ranking-item__icon--hover {
  visibility: hidden;
}

.sv-ranking-item:focus {
  outline: none;
}

.sv-ranking-item:focus .sv-ranking-item__icon--focus {
  visibility: visible;
  top: calc(var(--sjs2-base-unit-spacing) * 0.6);
  height: var(--sjs2-size-x300);
}

.sv-ranking-item:focus .sv-ranking-item__index {
  background: $background;
  outline: var(--sjs2-border-width-x200) solid $primary;
}

.sv-ranking-item__content.sv-ranking-item__content {
  display: flex;
  align-items: center;
  line-height: 1em;
  padding: var(--sjs2-spacing-x050) 0px;
  border-radius: var(--sjs2-radius-component-ranking);
}

.sv-ranking-item__icon-container {
  position: relative;
  left: 0;
  bottom: 0;
  flex-shrink: 0;
  width: var(--sjs2-size-x300);
  @include sjs2--typography--component--label--content;
  height: calc(1lh + var(--sjs2-spacing-x200));
  align-self: flex-start;
  padding-left: var(--sjs2-spacing-x100);
  padding-right: var(--sjs2-spacing-x100);
  margin-left: var(--sjs2-spacing-negative-x200);
  box-sizing: content-box;
}

.sv-ranking-item--disabled.sv-ranking-item--disabled,
.sv-ranking-item--readonly.sv-ranking-item--readonly,
.sv-ranking-item--preview.sv-ranking-item--preview {
  cursor: initial;
  user-select: initial;
  -webkit-user-select: initial;

  .sv-ranking-item__icon-container.sv-ranking-item__icon-container {
    .sv-ranking-item__icon.sv-ranking-item__icon {
      visibility: hidden;
    }
  }
}

.sv-ranking-item__icon.sv-ranking-item__icon {
  @include sjs2--typography--component--label--content;
  height: 1lh;
  width: 1lh;
  visibility: hidden;
  fill: $primary;
  position: absolute;
  top: var(--sjs2-spacing-x100);
}

.sv-ranking-item__index.sv-ranking-item__index {
  @include sjs2--typography--component--label--content;
  font-weight: var(--sjs2-typography-font-weight-strong);
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: center;
  background-color: var(--sjs2-color-bg-brand-secondary);
  color: var(--sjs2-color-fg-basic-primary);
  border-radius: 100%;
  height: 1lh;
  width: 1lh;
  padding: var(--sjs2-spacing-x100);
  box-sizing: content-box;
  margin-left: var(--sjs2-spacing-x000);
  transition:
    outline $transition-duration,
    background $transition-duration;
  outline: var(--sjs2-border-width-x200) solid transparent;
  align-self: self-start;

  svg {
    fill: currentColor;
    width: $font-editorfont-size;
    height: $font-editorfont-size;
  }
}

.sv-ranking-item__text {
  @include sjs2--typography--component--label--content;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: var(--sjs2-color-component-label-default-text);
  margin: 0 var(--sjs2-spacing-x200);
  overflow-wrap: break-word;
  word-break: normal;
  align-self: self-start;
  padding-block: var(--sjs2-spacing-x100);

  .sv-string-viewer,
  .sv-string-editor {
    overflow: initial;
    white-space: pre-line;
  }
}

.sd-ranking--disabled .sv-ranking-item__text {
  color: var(--sjs2-color-fg-basic-primary);
  opacity: 0.25;
}

.sv-ranking-item--disabled .sv-ranking-item__text {
  color: var(--sjs2-color-fg-basic-primary);
  opacity: 0.25;
}

.sv-ranking-item--readonly {
  .sv-ranking-item__index {
    background-color: $background-dark;
  }
}

.sv-ranking-item--preview {
  .sv-ranking-item__index {
    background-color: transparent;
    box-shadow: inset 0 0 0 1px $foreground;
    box-sizing: border-box;
  }
}

.sv-ranking-item__ghost.sv-ranking-item__ghost {
  display: none;
  background-color: $background-dim;
  border-radius: var(--sjs2-radius-component-ranking);
  width: calc(var(--sjs2-base-unit-size) * 31);
  @include sjs2--typography--component--label--content;
  height: calc(1lh + var(--sjs2-spacing-x200));
  z-index: 1;
  position: absolute;
  left: 0;
  top: var(--sjs2-spacing-x050);
}

:dir(rtl),
[style*="direction:rtl"],
[style*="direction: rtl"] {
  .sv-ranking {
    transform: scale(-1, 1);
    direction: ltr;
  }
  .sv-ranking-item__text,
  .sv-ranking__container-placeholder,
  .sd-ranking-item__index {
    transform: scale(-1, 1);
    direction: rtl;
  }
}

.sv-ranking-item--ghost {
  @include sjs2--typography--component--label--content;
  height: calc(1lh + var(--sjs2-spacing-x300));

  .sv-ranking-item__text .sv-string-viewer,
  .sv-ranking-item__text .sv-string-editor {
    white-space: unset;
  }
}

.sv-ranking-item--ghost .sv-ranking-item__ghost {
  display: block;
}

.sv-ranking-item--ghost .sv-ranking-item__content {
  visibility: hidden;
}

.sv-ranking-item--drag .sv-ranking-item__content {
  box-shadow: $shadow-medium-large;
  border-radius: var(--sjs2-radius-component-ranking);
}

.sv-ranking--drag .sv-ranking-item:hover .sv-ranking-item__icon {
  visibility: hidden;
}

.sv-ranking-item--drag .sv-ranking-item__icon--hover {
  visibility: visible;
}

.sv-ranking--mobile .sv-ranking-item__icon--hover {
  visibility: visible;
  fill: $foreground-light;
}

.sv-ranking--mobile.sv-ranking--drag .sv-ranking-item--ghost .sv-ranking-item__icon.sv-ranking-item__icon--hover {
  visibility: hidden;
}

.sv-ranking--mobile.sv-ranking-shortcut {
  max-width: 80%;
}

.sv-ranking--mobile {
  .sv-ranking-item__index.sv-ranking-item__index {
    margin-left: 0;
  }

  .sd-element--with-frame .sv-ranking-item__icon {
    margin-left: 0;
  }
}

.sv-ranking--design-mode .sv-ranking-item:hover .sv-ranking-item__icon {
  visibility: hidden;
}

.sv-ranking--disabled {
  opacity: 0.8;
}

.sv-ranking-shortcut[hidden] {
  display: none;
}

.sv-ranking-shortcut .sv-ranking-item__icon {
  fill: $primary;
}

.sv-ranking-shortcut .sv-ranking-item__text {
  margin-right: var(--sjs2-spacing-x400);
}

.sv-ranking-shortcut .sv-ranking-item__icon--hover {
  visibility: visible;
}

.sv-ranking-shortcut .sv-ranking-item__icon {
  @include sjs2--typography--component--label--content;
  height: 1lh;
  width: 1lh;
  top: var(--sjs2-spacing-x100);
}

.sv-ranking-shortcut {
  .sv-ranking-item__content {
    padding-left: var(--sjs2-spacing-x050);
  }

  .sv-ranking-item__icon-container {
    margin-left: var(--sjs2-spacing-x000);
  }
}

.sv-ranking-shortcut {
  cursor: grabbing;
  position: absolute;
  z-index: 10000;
  border-radius: var(--sjs2-radius-component-ranking);
  min-width: 100px;
  max-width: 400px;
  box-shadow: var(--sjs2-border-effect-floating-default);
  background-color: var(--sjs2-color-bg-basic-primary);

  .sv-ranking-item {
    box-sizing: content-box;

    .sv-ranking-item__text {
      .sv-string-viewer,
      .sv-string-editor {
        overflow: hidden;
        white-space: nowrap;
      }
    }
  }
}

.sv-ranking--select-to-rank {
  display: flex;
}

.sv-ranking--select-to-rank-vertical {
  flex-direction: column-reverse;

  .sv-ranking__containers-divider {
    margin: var(--sjs2-spacing-x300) 0;
    height: 1px;
  }

  .sv-ranking__container--empty {
    padding-top: var(--sjs2-spacing-x100);
    padding-bottom: var(--sjs2-spacing-x100);
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.sv-ranking-item--animate-item-removing {
  animation-name: moveIn, fadeIn;
  animation-direction: reverse;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-duration: $ranking-move-out-duration, $ranking-fade-out-duration;
  animation-delay: $ranking-move-out-delay, 0s;
}

.sv-ranking-item--animate-item-adding {
  animation-name: moveIn, fadeIn;
  opacity: 0;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-duration: $ranking-move-in-duration, $ranking-fade-in-duration;
  animation-delay: 0s, $ranking-fade-in-delay;
}

.sv-ranking-item--animate-item-adding-empty {
  animation-name: fadeIn;
  opacity: 0;
  animation-timing-function: linear;
  animation-duration: $ranking-fade-in-duration;
  animation-delay: 0;
}

.sv-ranking-item--animate-item-removing-empty {
  animation-name: fadeIn;
  animation-direction: reverse;
  animation-timing-function: linear;
  animation-duration: $ranking-fade-out-duration;
  animation-delay: 0;
}

@keyframes sv-animate-item-opacity-reverse-keyframes {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes sv-animate-item-opacity-keyframes {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.sv-ranking--select-to-rank-horizontal {
  .sv-ranking__container {
    max-width: calc(50% - 1px);
  }

  .sv-ranking__containers-divider {
    width: 1px;
  }

  .sv-ranking__container--to {
    .sv-ranking-item {
      left: var(--sjs2-spacing-x200);
    }
  }

  .sv-ranking__container--empty {
    &.sv-ranking__container--to {
      //padding-right: var(--sjs2-spacing-x300);

      .sv-ranking-item {
        left: initial;
      }

      .sv-ranking__container-placeholder {
        padding-left: var(--sjs2-spacing-x500);
      }
    }

    &.sv-ranking__container--from {
      //padding-left: var(--sjs2-spacing-x300);

      .sv-ranking__container-placeholder {
        padding-right: var(--sjs2-spacing-x500);
      }
    }
  }
}

.sv-ranking__container-placeholder {
  color: var(--sjs2-color-fg-basic-secondary);
  @include sjs2--typography--default;
  white-space: normal;
  display: flex;
  justify-content: center;
  align-items: center;
  //width: 100%;
  height: 100%;
  padding-top: var(--sjs2-spacing-x050);
  padding-bottom: var(--sjs2-spacing-x050);
  box-sizing: border-box;
}

.sv-ranking__container {
  flex: 1;
  //max-width: 100%;
}

.sv-ranking__container--empty {
  //padding: var(--sjs2-spacing-x800);
  box-sizing: border-box;
  text-align: center;
}

.sv-ranking__containers-divider {
  background: $border-light;
}

.sv-ranking__container--from {
  .sv-ranking-item__icon--focus {
    display: none;
  }
}

.sv-ranking--select-to-rank-horizontal .sv-ranking__container--to .sv-ranking-item {
  left: 0 !important;
  padding-left: 16px;

  .sv-ranking-item__ghost {
    left: initial;
  }
}

.sv-ranking--select-to-rank-swap-areas {
  flex-direction: row-reverse;

  .sv-ranking__container--to {
    .sv-ranking-item {
      padding-left: 0;
      left: -24px !important;
    }
  }

  .sv-ranking__container--from {
    .sv-ranking-item {
      padding-left: var(--sjs2-spacing-x200);
      left: 0;
    }

    .sv-ranking-item__ghost.sv-ranking-item__ghost {
      left: var(--sjs2-spacing-x200);
    }
  }

  .sv-ranking__container--empty {
    &.sv-ranking__container--to {
      .sv-ranking__container-placeholder {
        padding-right: var(--sjs2-spacing-x500);
        padding-left: 0;
      }

      .sv-ranking-item__ghost.sv-ranking-item__ghost {
        right: var(--sjs2-spacing-x200);
      }
    }

    &.sv-ranking__container--from {
      .sv-ranking__container-placeholder {
        padding-left: var(--sjs2-spacing-x500);
        padding-right: 0;
      }
    }
  }
}

.sd-question--mobile,
.sd-root-modern.sd-root-modern--mobile {
  .sv-ranking-item__icon-container {
    margin-left: var(--sjs2-spacing-negative-x200);
    display: flex;
    justify-content: flex-end;
    padding: 0;
    width: var(--sjs2-size-x500);
  }
}

